Updated the TODO

--- a/TODO.org
+++ b/TODO.org
@@ -1,2 +1,4 @@
 #+TITLE:The TODO list
 * TODO Reduce the complexity of the main file.
+* TODO Investigate if it is possible to go back in the feeds timeline for older videos.
+* TODO Update the readme with  https://github.com/FreeTubeApp/FreeTube/wiki/Importing-Your-YouTube-Subscriptions#from-youtube
