Updated the TODO

--- a/TODO.org
+++ b/TODO.org
@@ -3,3 +3,4 @@
 * TODO Investigate if it is possible to go back in the feeds timeline for older videos.
 * DONE Update the readme with https://github.com/FreeTubeApp/FreeTube/wiki/Importing-Your-YouTube-Subscriptions#from-youtube
 * TODO Make the script aware of the newest video file in the downloads directory and try to not download any older videos, with a bypass option.
+* TODO Make a pretty package of it all.
